added basic rate